Enum "status_pedido" {
  "pago"
  "em pagamnto"
  "pendente"
  "cancelado"
}

Enum "status_ingresso" {
  "confirmado"
  "em pagamento"
  "reservado"
  "expirado"
  "invalido"
}

Enum "tipo_ingresso" {
  "inteira"
  "meia"
}

Enum "tipo_pedido" {
  "combo"
  "avulso"
}

Enum "status_sessao" {
  "finalizada"
  "aberta"
  "lotada"
}

Table usuarios {
  id uuid [pk]
  email varchar [not null, unique]
  data_nascimento datetime [not null]
  data_criacao datetime [not null, default: `CURRENT_TIMESTAMP`]
  ultima_atualizacao datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table cinemas {
  id uuid [pk]
  nome varchar [not null, unique]
  localizacao varchar [not null]
  data_criacao datetime [not null, default: `CURRENT_TIMESTAMP`]
  ultima_atualizacao datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table salas {
  id uuid [pk]
  numero int [not null]
  cinema_id uuid [ref: > cinemas.id, not null]
  data_criacao datetime [not null, default: `CURRENT_TIMESTAMP`]
  ultima_atualizacao datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table assentos {
  id uuid [pk]
  numero int [not null]
  fileira varchar [not null]
  sala_id uuid [ref: > salas.id, not null]
  data_criacao datetime [not null, default: `CURRENT_TIMESTAMP`]
  ultima_atualizacao datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table filmes {
  id uuid [pk]
  nome varchar [not null, unique]
  lancamento date [not null]
  classificacao varchar [not null]
  descricao text [not null]
  trailer varchar [not null]
  capa varchar [not null]
  data_criacao datetime [not null, default: `CURRENT_TIMESTAMP`]
  ultima_atualizacao datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table sessoes {
  id uuid [pk]
  filme_id uuid [ref: > filmes.id, not null]
  sala_id uuid [ref: > salas.id, not null]
  status status_sessao [not null]
  data_sessao timestamp [not null]
  data_criacao datetime [not null, default: `CURRENT_TIMESTAMP`]
  ultima_atualizacao datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table ingressos {
  id uuid [pk]
  sessao_id uuid [ref: > sessoes.id, not null]
  assento_id uuid [ref: > assentos.id, not null]
  usuario_id uuid [ref: > usuarios.id, not null]
  status status_ingresso [not null]
  valor numeric [not null]
  data_criacao datetime [not null, default: `CURRENT_TIMESTAMP`]
  ultima_atualizacao datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (sessao_id, assento_id, usuario_id) [unique]
  }
}

Table produtos {
  id uuid [pk]
  nome varchar [not null, unique]
  descricao text [not null]
  valor numeric [not null]
  data_criacao datetime [not null, default: `CURRENT_TIMESTAMP`]
  ultima_atualizacao datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table combos {
  id uuid [pk]
  nome varchar [not null, unique]
  descricao text [not null]
  valor numeric [not null]
  data_criacao datetime [not null, default: `CURRENT_TIMESTAMP`]
  ultima_atualizacao datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table combos_produtos {
  combo_id uuid [ref: > combos.id, not null]
  produto_id uuid [ref: > produtos.id, not null]
  data_criacao datetime [not null, default: `CURRENT_TIMESTAMP`]
  ultima_atualizacao datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (combo_id, produto_id) [pk]
  }
}

Table pedidos {
  id uuid [pk]
  usuario_id uuid [ref: > usuarios.id, not null]
  status status_pedido [not null]
  data_criacao datetime [not null, default: `CURRENT_TIMESTAMP`]
  ultima_atualizacao datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table pedidos_ingressos {
  pedido_id uuid [ref: > pedidos.id, not null]
  ingresso_id uuid [ref: > ingressos.id, not null]
  data_criacao datetime [not null, default: `CURRENT_TIMESTAMP`]
  ultima_atualizacao datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (pedido_id, ingresso_id) [pk]
  }
}

Table pedidos_produtos {
  pedido_id uuid [ref: > pedidos.id, not null]
  produto_id uuid [ref: > produtos.id, note: "Opcional, apenas para rastreamento"]
  combo_id uuid [ref: > combos.id, note: "Opcional, apenas para rastreamento"]
  nome varchar [not null]
  descricao text [not null]
  quantidade numeric [not null]
  total numeric [not null]
  tipo tipo_pedido [not null]
  data_criacao datetime [not null, default: `CURRENT_TIMESTAMP`]
  ultima_atualizacao datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table valor_ingresso {
  id uuid [pk]
  valor numeric [not null]
  tipo tipo_ingresso [not null, unique]
  data_criacao datetime [not null, default: `CURRENT_TIMESTAMP`]
  ultima_atualizacao datetime [not null, default: `CURRENT_TIMESTAMP`]
}